; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/sockets/sendfile/extr_sendfile.c_signal_alarm.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/sockets/sendfile/extr_sendfile.c_signal_alarm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"# test timeout\0A\00", align 1
@accept_socket = common dso_local global i64 0, align 8
@listen_socket = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @signal_alarm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @signal_alarm(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %5 = load i64, i64* @accept_socket, align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i64, i64* @accept_socket, align 8
  %9 = call i32 @close(i64 %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i64, i64* @listen_socket, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i64, i64* @listen_socket, align 8
  %15 = call i32 @close(i64 %14)
  br label %16

16:                                               ; preds = %13, %10
  %17 = call i32 @_exit(i32 -1) #3
  unreachable
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @close(i64) #1

; Function Attrs: noreturn
declare dso_local i32 @_exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
